finally fixed the dialog box issue the scrollbar removal was adding a strip on body but not on the navbar when dialog is opened, it was messing with the layout of the navbar, so i added a mutationobserver to block shadcn from changing it and added custom css handlers

--- a/src/index.css
+++ b/src/index.css
@@ -116,3 +116,9 @@
     @apply bg-background text-foreground;
   }
 }
+html{
+  scrollbar-gutter: stable;
+}
+body{
+  background-color: #2c2c2c;
+}
